tests/NormalTests/paczka1/fuzzy1/82479844.err
Error in line 1: xjrOsLz S166 91,4
Error in line 9: sJx148ex S166 79,2
Error in line 36: S558 S166 288,13
